# fiscore

./: .env.example  .gitignore  APP_NAVIGATION.md  BACKEND_BOOTSTRAP_CHECKLIST.md  COST_EFFECTIVE_STACK.md  DATA_MODEL.md  Dockerfile.api  Dockerfile.worker  FEATURES.md  FIRESTORE_SCHEMA.md  MASTER_DATA_ARCHITECTURE.md  MASTER_DATA_SCHEMA.md  README.md  SWORD_SOLUTIONS_INGESTION_PLAN.md  SWORD_SOLUTIONS_PARSER_RULES.md  SYNC_STRATEGY.md  TECH_STACK.md  WORKFLOWS.md  pyproject.toml
deploy/: cloudbuild.api.yaml  cloudbuild.worker.yaml
docs/: README.md
docs/app/: FIRESTORE_SCHEMA.md
docs/backend/: ARCHITECTURE_DIAGRAM.md  GCP_DEPLOYMENT_RUNBOOK.md  PRODUCTION_ROLLOUT_CHECKLIST.md
docs/ingestion/: INGESTION_WORKFLOWS.md  INTERNAL_OPS_CONSOLE.md  MASTER_LIST_STRATEGY.md  RESTAURANT_MATCHING.md
docs/product/: AUDIT_CHECKLIST_DESIGN.md  FEATURES.md  README.md  SCORING_RULES.md  USER_ROLES.md  WORKFLOWS.md
scripts/: apply_sql_bootstrap.py  create_scheduler_jobs.ps1  deploy_api.ps1  deploy_worker.ps1  inspect_sword_form.py  run_source_job.py  run_sword_job.py
sql/bootstrap/: 001_init_schemas.sql  002_init_tables.sql
sql/migrations/: 001_add_finding_detail_and_comments.sql  002_add_master_inspection_report.sql  003_add_finding_detail_json.sql  004_add_scrape_run_context_columns.sql  005_add_platform_registry.sql  006_add_inspection_and_finding_fields.sql  007_add_scrape_run_issue.sql  008_add_source_registry_config.sql
sql/seeds/: 001_seed_sword_sources.sql  002_seed_georgia_healthinspections.sql
src/fiscore_backend/: __init__.py  config.py  db.py  models.py  (+1 more)
(+33 files in other folders)
